reset function added

--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
     <div class="container mt-5 w-75">
       <h1 class="display-6 text-center"><span class="text-info bg-secondary p-4 rounded-circle"> Book List</span></h1>
       <div class="row">
-        <div class="col-md-6 mt-5 shadow-lg p-2">
+        <div class="col-md-6 mt-5 shadow-lg p-3 rounded">
           <form id="book-form">
             <div class="form-group">
-              <label for="title">Title</label>
+              <label for="title">Title*</label>
               <input type="text" id="title" class="form-control" />
             </div>
     
             <div class="form-group">
-              <label for="author">Author</label>
+              <label for="author">Author*</label>
               <input type="text" id="author" class="form-control" />
             </div>
     
             <div class="form-group">
-              <label for="year">Year</label>
+              <label for="year">Year*</label>
               <input type="text" id="year" class="form-control" />
             </div>
             <input type="submit" value="Add Book" class="btn btn-info btn-block" />
